# framework.web.wearable.wrt-installer

./: CMakeLists.txt  wrt-installer.manifest
configuration/: CMakeLists.txt  common.xsd  config.xml  feature-wrt.properties  packaging-configuration.xsd  privilege-wrt.properties  signature_schema.xsd  validate-config.xml.sh  widgets.tizen.xsd  widgets.xsd
packaging/: wrt-installer.spec
src/: CMakeLists.txt
src/commons/: installer_log.h  wrt_common_types.h  wrt_error.h  wrt_install_mode.h
src/configuration_parser/: deny_all_parser.cpp  deny_all_parser.h  element_parser.h  ignoring_parser.cpp  ignoring_parser.h  libiriwrapper.cpp  libiriwrapper.h  parser_runner.cpp  parser_runner.h  root_parser.h  widget_parser.cpp  widget_parser.h
src/jobs/: job.cpp  job.h  job_base.h  job_exception_base.h  job_exception_error.h  job_types.h
src/jobs/plugin_install/: job_plugin_install.cpp  job_plugin_install.h  plugin_install_task.cpp  plugin_install_task.h  plugin_installer_context.h  plugin_installer_errors.h  plugin_installer_struct.h  plugin_metafile_reader.cpp  plugin_metafile_reader.h  plugin_objects.cpp  plugin_objects.h
src/jobs/widget_install/: ace_registration.cpp  ace_registration.h  directory_api.cpp  directory_api.h  job_widget_install.cpp  job_widget_install.h  languages.def  manifest.cpp  manifest.h  task_ace_check.cpp  task_ace_check.h  task_certify.cpp  task_certify.h  task_certify_level.cpp  task_certify_level.h  task_commons.cpp  task_commons.h  task_configuration.cpp  task_configuration.h  task_database.cpp  task_database.h  task_encrypt_resource.cpp  task_encrypt_resource.h  task_file_manipulation.cpp  task_file_manipulation.h  task_install_ospsvc.cpp  task_install_ospsvc.h  task_manifest_file.cpp  task_manifest_file.h  task_pkg_info_update.cpp  task_pkg_info_update.h  task_prepare_files.cpp  task_prepare_files.h  task_prepare_reinstall.cpp  task_prepare_reinstall.h  task_process_config.cpp  task_process_config.h  task_recovery.cpp  task_recovery.h  task_remove_backup.cpp  (+19 more)
src/jobs/widget_uninstall/: job_widget_uninstall.cpp  job_widget_uninstall.h  task_check.cpp  task_check.h  task_db_update.cpp  task_db_update.h  task_delete_pkginfo.cpp  task_delete_pkginfo.h  task_remove_custom_handlers.cpp  task_remove_custom_handlers.h  task_remove_files.cpp  task_remove_files.h  task_smack.cpp  task_smack.h  task_uninstall_ospsvc.cpp  task_uninstall_ospsvc.h  uninstaller_context.h  widget_uninstall_errors.h  widget_uninstaller_struct.h
src/logic/: installer_controller.cpp  installer_controller.h  installer_logic.cpp  installer_logic.h
src/misc/: feature_logic.cpp  feature_logic.h  libxml_utils.cpp  libxml_utils.h  plugin_path.cpp  plugin_path.h  wac_widget_id.cpp  wac_widget_id.h  widget_install_to_external.cpp  widget_install_to_external.h  widget_location.cpp  widget_location.h
src/pkg-manager/: CMakeLists.txt  DESCRIPTION  backendlib.cpp  pkgmgr_signal.cpp  pkgmgr_signal.h  pkgmgr_signal_dummy.h  pkgmgr_signal_interface.h
src/wrt-installer/: CMakeLists.txt  command_parser.cpp  command_parser.h  installer_callbacks_translate.cpp  installer_callbacks_translate.h  installer_main_thread.cpp  installer_main_thread.h  language_subtag_rst_tree.cpp  language_subtag_rst_tree.h  plugin_utils.cpp  plugin_utils.h  wrt-installer.cpp  wrt-installer.h  wrt_type.h
tests/: CMakeLists.txt
tests/general/: AceRegistrationTests.cpp  BackgroundPageTests.cpp  CMakeLists.txt  InstallerWrapper.cpp  InstallerWrapper.h  LanguageSubtagRstTreeTests.cpp  ManifestFile.cpp  ManifestFile.h  ManifestTests.cpp  NPluginsInstallTests.cpp  ParserRunnerTests.cpp  ParsingAccountTests.cpp  ParsingAllowNavigationTests.cpp  ParsingAppWidgetTests.cpp  ParsingCategoryTests.cpp  ParsingContentTests.cpp  ParsingCspTests.cpp  ParsingMetadataTests.cpp  ParsingSplashImgTests.cpp  ParsingTizenAppcontrolTests.cpp  ParsingTizenPrivilegeTests.cpp  PluginsInstallation.cpp  TaskConfigurationTests.cpp  TestInit.cpp  WidgetInstallManifestTests.cpp  WidgetLocationTests.cpp  WidgetUpdateTests.cpp
tests/general/configs/: AllowNavigationEmpty.xml  AllowNavigationMultipleHosts.xml  AllowNavigationMultipleHostsMultiline.xml  AppWidgetAutoLaunchEmpty.xml  AppWidgetAutoLaunchWrongValue.xml  AppWidgetFull.xml  AppWidgetIdEmpty.xml  AppWidgetIdTooLong.xml  AppWidgetIdTooShort.xml  AppWidgetIdWrongChar.xml  AppWidgetMultipleBoxContent.xml  AppWidgetMultipleBoxIcon.xml  AppWidgetMultipleBoxLabel.xml  AppWidgetMultiplePrimary.xml  AppWidgetNoBoxContent.xml  AppWidgetNoBoxLabel.xml  AppWidgetNoId.xml  AppWidgetNoPrimary.xml  AppWidgetPrimaryEmpty.xml  AppWidgetPrimaryWrongValue.xml  AppWidgetUpdatePeriodEmpty.xml  AppWidgetUpdatePeriodLow.xml  AppWidgetUpdatePeriodWrongFormat.xml  BoxContentEmpty.xml  BoxContentMouseEventEmpty.xml  BoxContentMouseEventWrongValue.xml  BoxContentMultipleBoxSize.xml  BoxContentMultiplePd.xml  BoxContentNoSrc.xml  BoxContentNoTouchEfect.xml  BoxContentSrcEmpty.xml  BoxContentTouchEfectEmpty.xml  BoxContentTouchEfectWrongValue.xml  BoxIconEmpty.xml  BoxIconSrcEmpty.xml  BoxLabelEmpty.xml  BoxSizeEmpty.xml  BoxSizePreviewEmpty.xml  BoxSizeUserDecorationEmpty.xml  ContentEmpty.xml  (+42 more)
tests/general/widgets/: account.wgt  allowNavigation.wgt  app-control.wgt  appWidgetFull.wgt  appWidgetIncorrect.wgt  appWidgetMinimal.wgt  bg-00-with_bg.wgt  bg-01-missing_file.wgt  bg-02-without_bg.wgt  category.wgt  contentCorrect.wgt  contentIncorrect.wgt  csp.wgt  inst_nplug_1.wgt  inst_nplug_2.wgt  inst_nplug_3.wgt  inst_nplug_4.wgt  manifest.wgt  metadata.wgt  privilege.wgt  splash.wgt  widgetFakeConfig.wgt  widgetInDir.tar  widgetUpdateVer100Signed.wgt  widgetUpdateVer100Unsigned.wgt  widgetUpdateVer220Signed.wgt  widgetUpdateVer220SignedAnotherAuthor.wgt  widgetUpdateVer220Unsigned.wgt  widgetUpdateVer220UnsignedDifferentId.wgt
